jinuemong -one에 first branch 변화 적용

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Jinuemong-one</h1>
+    <h1>Jinuemong-one + fisrtBarnch 적용 </h1>
     <div>3.JINUEMONG-ONE에서 기능 추가 </div>
 </body>
 </html>
