--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>master - secondBranch 병합 완료됨</h1>
+    <h1>master 와 secondBranch 병합 완료됨</h1>
     <h1>Jinuemong-one + fisrtBarnch 적용 </h1>
     <h1>Jinuemong-two + secondBranch 적용 </h1>
     <div>3.JINUEMONG-ONE에서 기능 추가 </div>
